TEST_PROGRAMS/VALID/08/forLoops.go
package main;
func main(){
    for{

    }
    for ;;{

    }
    x := 10;
    for x < 10 {

    }
    for ;x < 10; {

    }
    for y:=0; y < 10 ; y++ {

    }
}
