TEST_PROGRAMS/INVALID/03/invalid_for2.go
package main
func main() {
	for {
	}
	// "While" loop
	for x < 10 {
	}
	for ; x > 10; x-- {
	}
	for i := 0; i := 10; i++ {
	}
}
